--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
             <fieldset>
                 <legend>Customer Info</legend>
                 <label for="fname">First Name:</label>
-                    <input type="text" name="fname" required><br>
+                    <input type="text" name="fname" id="fname" required><br>
                 <label for="lname">Last Name:</label>     
-                    <input type="text" name="lname" required><br>
+                    <input type="text" name="lname" id="lname" required><br>
                 <label for="address">Address:</label>
-                    <input type="text" name="address" required><br> 
+                    <input type="text" name="address" id="address" required><br> 
                 <label for="city">City:</label>    
-                    <input type="text" name="city" required><br>
+                    <input type="text" name="city" id="city" required><br>
                 <label for="state">State:</label>   
-                    <input type="text" name="state" required maxlength="2" placeholder="2-character abbreviation" pattern="[a-zA-Z]{2}"><br>
+                    <input type="text" name="state" id="state" required maxlength="2" placeholder="2-character abbreviation" pattern="[a-zA-Z]{2}"><br>
                 <label for="zip">Zip:</label>
-                    <input type="text" name="zip" required placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits" required><br>
+                    <input type="text" name="zip" id="zip" required placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits"><br>
                 <label for="phone">Phone:</label>
-                    <input type="tel" name="phone" placeholder="999-999-9999" pattern="/d{3}[-]/d{3}[-]/d{4}" title="Phone number must be of format 999-999-9999" required><br>
+                    <input type="tel" name="phone" id="phone" placeholder="999-999-9999" pattern="/d{3}[-]/d{3}[-]/d{4}" title="Phone number must be of format 999-999-9999" required><br>
                 <label for="email">Email:</label>
-                    <input type="email" name="email" required placeholder="mail@ericrocks.com" pattern="[a-z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,}$" title="email must have @ and valid hosting site"><br>
+                    <input type="email" name="email" id="email" required placeholder="mail@ericrocks.com" pattern="[a-z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,}$" title="email must have @ and valid hosting site"><br>
                 <label for="feedback">What do you want to tell us about your experience?</label>
                     <select name="Feedback" size="3" multiple>
                         <option value="feedback1">Site was easy to use</option>
